--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="./sass/main.scss">
 </head>
 <body>
-    
+    <include src="./partials/header.html"></include>
     
     <main>    
     </main>
