--- a/src/index.html
+++ b/src/index.html
@@ -14,11 +14,12 @@
 </head>
 <body>
     <include src="./partials/header.html"></include>
-    
-    <main>    
-    </main>
 
-    <script src="./js/modal.js"></script>
+    <include src="./partials/footer.html"></include>
+    
+
+     <script src="./js/modal.js"></script>
+    <script src="./js/iconListMaker.js" type="module"></script>
     <script src="./js/popup.js"></script>
 </body>
 </html>
