--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,8 @@
 </head>
 <body>
     <include src="./partials/header.html"></include>
-
+    
+    <include src="./partials/lesson-plan.html"></include>
     <include src="./partials/footer.html"></include>
     
 
