--- a/src/storage.html
+++ b/src/storage.html
@@ -14,12 +14,14 @@
 </head>
 <body>
     <include src="./partials/header.html"></include>
+    <include src="./partials/article-header-s.html"></include>
 
-    <include src="./partials/herotopmenu.html"></include>
+   
 
     <include src="./partials/footer.html"></include>
      <script src="./js/modal.js"></script>
     <script src="./js/iconListMaker.js" type="module"></script>
     <script src="./js/popup.js"></script>
 </body>
-</html>
+</html> 
+  
