--- a/src/timetable.html
+++ b/src/timetable.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <include src="./partials/header.html"></include>
-
+    <include src="./partials/article-header-t.html"></include>
     <include src="./partials/timetablepar.html"></include>
 
     <include src="./partials/footer.html"></include>
