--- a/src/guide.html
+++ b/src/guide.html
@@ -14,9 +14,9 @@
 </head>
 <body>
     <include src="./partials/header.html"></include>
-
-    <include src="./partials/herotopmenu.html"></include>
-
+    <include src="./partials/article-header-g.html"></include>
+    <include src="./partials/bloom.html"></include>
+    <include src="./partials/lesson-plan.html"></include>
     <include src="./partials/footer.html"></include>
      <script src="./js/modal.js"></script>
     <script src="./js/iconListMaker.js" type="module"></script>
