--- a/src/it.html
+++ b/src/it.html
@@ -14,6 +14,7 @@
 </head>
 <body>
     <include src="./partials/header.html"></include>
+    <include src="./partials/article-header-i.html"></include>
     <include src="./partials/gadget.html"></include>
 
     <include src="./partials/footer.html"></include>
