--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,7 @@
     
     <include src="./partials/header.html"></include>
     <include src="./partials/hero.html"></include>
+    <include src="./partials/thumb.html"></include>
     <include src="./partials/footer.html"></include>
      <script src="./js/modal.js"></script>
     <script src="./js/iconListMaker.js" type="module"></script>
