--- a/src/it.html
+++ b/src/it.html
@@ -14,7 +14,8 @@
 </head>
 <body>
     <include src="./partials/header.html"></include>
-    <include src="./partials/article-header-i.html"></include>
+    
+    <include src="./partials/thumb.html"></include>
     <include src="./partials/gadget.html"></include>
 
     <include src="./partials/footer.html"></include>
