--- a/src/it.html
+++ b/src/it.html
@@ -15,9 +15,9 @@
 <body>
     <include src="./partials/header.html"></include>
     
-    <include src="./partials/thumb.html"></include>
+    <include src="./partials/article-header-i.html"></include>
     <include src="./partials/gadget.html"></include>
-
+    <include src="./partials/thumb.html"></include>
     <include src="./partials/footer.html"></include>
      <script src="./js/modal.js"></script>
     <script src="./js/iconListMaker.js" type="module"></script>
