--- a/src/timetable.html
+++ b/src/timetable.html
@@ -14,9 +14,9 @@
 </head>
 <body>
     <include src="./partials/header.html"></include>
-    
+    <include src="./partials/article-header-t.html"></include>
     <include src="./partials/timetablepar.html"></include>
-
+    <include src="./partials/lesson-plan.html"></include>
     <include src="./partials/footer.html"></include>
      <script src="./js/modal.js"></script>
     <script src="./js/iconListMaker.js" type="module"></script>
