--- a/src/storage.html
+++ b/src/storage.html
@@ -15,6 +15,7 @@
 <body>
     <include src="./partials/header.html"></include>
     <include src="./partials/article-header-s.html"></include>
+    <include src="./partials/article-storage.html"></include>
 
    
 
