--- a/src/guide.html
+++ b/src/guide.html
@@ -15,6 +15,10 @@
 <body>
     <include src="./partials/header.html"></include>
     <include src="./partials/article-header-g.html"></include>
+    <include src="./partials/article-guide.html"></include>
+    <include src="./partials/toolbar.html"></include>
+    <include src="./partials/progressbar.html"></include>
+    <include src="./partials/lesson-plan.html"></include>
     <include src="./partials/bloom.html"></include>
     <include src="./partials/footer.html"></include>
      <script src="./js/modal.js"></script>
