--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,7 @@
 <body>
     
     <include src="./partials/header.html"></include>
+    <include src="./partials/recentlinks.html"></include>
     <include src="./partials/article-header.html"></include>
     <include src="./partials/hero.html"></include>
     <include src="./partials/thumb.html"></include>
