--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,7 @@
     <include src="./partials/header.html"></include>
     <include src="./partials/recentlinks.html"></include>
     <include src="./partials/article-header.html"></include>
+    <include src="./partials/recentlinks-i.html"></include>
     <include src="./partials/hero.html"></include>
     <include src="./partials/thumb.html"></include>
     <include src="./partials/footer.html"></include>
