--- a/src/timetable.html
+++ b/src/timetable.html
@@ -16,6 +16,7 @@
     <include src="./partials/header.html"></include>
   
     <include src="./partials/article-header-t.html"></include>
+    <include src="./partials/recentlinks-t.html"></include>
     <include src="./partials/article-timetable.html"></include>
     <include src="./partials/timetablepar.html"></include>
     <include src="./partials/footer.html"></include>
